--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -66,14 +66,16 @@
           <div class="span9">
             <%= bootstrap_flash %>
             <%= yield %>
+          </div>
 
-        </div><!--/row-->
+        </div> <!-- /container -->
+    </div><!--/row-->
 
-      <footer>
-        <p>&copy; Company 2012</p>
-      </footer>
-
-    </div> <!-- /container -->
+    <div class="footer1">
+        <footer>
+          <p>&copy; Shree Chakradhar Swami Engineering</p>
+        </footer>
+    </div>
 
     <!-- Javascripts
     ================================================== -->
