--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -10,10 +10,13 @@
 <dl class="dl-horizontal">
   <dt><strong><%= model_class.human_attribute_name(:product_number) %>:</strong></dt>
   <dd><%= @product.product_number %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:product_code) %>:</strong></dt>
-  <dd><%= @product.product_code %></dd>
+
   <dt><strong><%= model_class.human_attribute_name(:product_name) %>:</strong></dt>
   <dd><%= @product.product_name %></dd>
+
+  <dt><strong><%= model_class.human_attribute_name(:vender_code) %>:</strong></dt>
+  <dd><%= @product.vender_code %></dd>
+
   <dt><strong><%= model_class.human_attribute_name(:product_type) %>:</strong></dt>
   <dd><%= @product.product_type %></dd>
   <dt><strong><%= model_class.human_attribute_name(:tax) %>:</strong></dt>
