--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -5,18 +5,19 @@
       <%= f.text_field :product_number, :class => 'text_field' %>
     </div>
   </div>
-  <div class="control-group">
-    <%= f.label :product_code, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :product_code, :class => 'text_field' %>
-    </div>
-  </div>
+
   <div class="control-group">
     <%= f.label :product_name, :class => 'control-label' %>
     <div class="controls">
       <%= f.text_field :product_name, :class => 'text_field' %>
     </div>
   </div>
+    <div class="control-group">
+      <%= f.label :vender_code, :class => 'control-label' %>
+      <div class="controls">
+        <%= f.text_field :vender_code, :class => 'text_field' %>
+      </div>
+    </div>
   <div class="control-group">
     <%= f.label :product_type, :class => 'control-label' %>
     <div class="controls">
