--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -18,8 +18,9 @@
     <tr>
       <th><%= model_class.human_attribute_name(:id) %></th>
       <th><%= model_class.human_attribute_name(:product_number) %></th>
-      <th><%= model_class.human_attribute_name(:product_code) %></th>
+
       <th><%= model_class.human_attribute_name(:product_name) %></th>
+      <th><%= model_class.human_attribute_name(:vender_code) %></th>
       <th><%= model_class.human_attribute_name(:product_type) %></th>
       <th><%= model_class.human_attribute_name(:tax) %></th>
       <th><%= model_class.human_attribute_name(:rate) %></th>
@@ -32,8 +33,9 @@
       <tr>
         <td><%= product.id %></td>
         <td><%= product.product_number %></td>
-        <td><%= product.product_code %></td>
+
         <td><%= product.product_name %></td>
+        <td><%= product.vender_code %></td>
         <td><%= product.product_type %></td>
         <td><%= product.tax %></td>
         <td><%= product.rate %></td>
