--- a/app/views/tax_invoices/generate_pdf.html.erb
+++ b/app/views/tax_invoices/generate_pdf.html.erb
@@ -16,7 +16,7 @@
             <div align="center">Subject to Nashik Jurisdiction</div>
             <div align="center">CHALLAN CUM INVOICE</div>
 
-            <div class="logo"><%= image_tag("scsc.png") %><h1 align="center"><b>Shree Chakradhar Swami Engineering</b></h1></div>
+            <div class="logo"><%= image_tag("/app/assets/images/scsc.png")  %><h1 align="center"><b>Shree Chakradhar Swami Engineering</b></h1></div>
             <div align="center"><b>[ISO : 9001 Certified]</b></div>
             <div align="center"><h3>SPECIALIST IN :</B> INTERNAL GRINDING / CYLINDRICAL GRINDING & SURFACE GRINDING (ROTARY)
             </h3></div>
@@ -88,7 +88,7 @@
           <td width="10%" align="center"><%= @tax_invoice.quantity %></td>
           <td width="15%" align="center"><%= @tax_invoice.rate %></td>
 
-          <td width="15%" align="center"><%= @tax_invoice.amount.round(5) %></td>
+          <td width="15%" align="center"><%= @tax_invoice.amount.round(2) %></td>
 
         </tr>
       </table>
@@ -152,17 +152,17 @@
           <td width="15%">
             <table border="1" height="100%" width="100%" cellpadding="0" cellspacing="0">
               <tr>
-                <td width="76%" align="center"> <%= @tax_invoice.amount.round(5) %> </td>
+                <td width="76%" align="center"> <%= @tax_invoice.amount.round(2) %> </td>
 
 
               </tr>
               <tr>
-                <td align="center"> <%= @tax_invoice.vat.round(5) %> </td>
+                <td align="center"> <%= @tax_invoice.vat.round(2) %> </td>
 
 
               </tr>
               <tr>
-                <td align="center"> <%= @tax_invoice.total_payment.round(5) %> </td>
+                <td align="center"> <%= @tax_invoice.total_payment.round(2) %> </td>
 
 
               </tr>
