--- a/app/views/tax_invoices/generate_pdf.html.erb
+++ b/app/views/tax_invoices/generate_pdf.html.erb
@@ -37,7 +37,7 @@
           <td valign="top">
             <table border="1" height="100%" width="100%" cellpadding="0" cellspacing="0">
               <tr>
-                <td width="25%" align="center">INVOICE No.</td><td width="25%" align="center"><%= @tax_invoice.invoice_number %></td><td width="25%" align="center">Date</td><td align="center"><%= @tax_invoice.invoice_date  %></td>
+                <td width="25%" align="center">INVOICE No.</td><td width="25%" align="center"><%= @tax_invoice.id %></td><td width="25%" align="center">Date</td><td align="center"><%= @tax_invoice.invoice_date  %></td>
               </tr>
               <tr>
                 <td width="25%" align="center">P.O. No.</td><td width="25%" align="center"><%= @tax_invoice.PO_number%></td><td width="25%" align="center">Date</td><td width="25%" align="center"><%= @tax_invoice.due_date %></td>
