--- a/app/views/tax_invoices/index.html.erb
+++ b/app/views/tax_invoices/index.html.erb
@@ -8,17 +8,18 @@
     <tr>
       <th><%= model_class.human_attribute_name(:id) %></th>
       <th><%= model_class.human_attribute_name(:PO_number) %></th>
-      <th><%= model_class.human_attribute_name(:invoice_number) %></th>
+
       <th><%= model_class.human_attribute_name(:invoice_date, :order => [:day, :month, :year]) %></th>
       <th><%= model_class.human_attribute_name(:due_date, :order => [:day, :month, :year]) %></th>
       <th><%= model_class.human_attribute_name(:product_name) %></th>
       <th><%= model_class.human_attribute_name(:invoice_type) %></th>
       <th><%= model_class.human_attribute_name(:quantity) %></th>
       <th><%= model_class.human_attribute_name(:rate) %></th>
-      <th><%= model_class.human_attribute_name(:labour_charges) %></th>
-      <th><%= model_class.human_attribute_name(:tax) %></th>
-      <th><%= model_class.human_attribute_name(:amount) %></th>
-      <th><%= model_class.human_attribute_name(:vat) %></th>
+      <th><%= model_class.human_attribute_name(:excise) %></th>
+      <th><%= model_class.human_attribute_name(:ed_cess) %></th>
+      <th><%= model_class.human_attribute_name(:edu_cess) %></th>
+      <th><%= model_class.human_attribute_name(:value_added_tax) %></th>
+
       <th><%= model_class.human_attribute_name(:total_payment) %></th>
       <th><%= model_class.human_attribute_name(:payment) %></th>
 
@@ -37,10 +38,12 @@
         <td><%= tax_invoice.invoice_type %></td>
         <td><%= tax_invoice.quantity %></td>
         <td><%= tax_invoice.rate %></td>
-        <td><%= tax_invoice.labour_charges %></td>
-        <td><%= tax_invoice.tax %></td>
-        <td><%= tax_invoice.amount.round(2) %></td>
-        <td><%= tax_invoice.vat.round(2) %></td>
+        <td><%= tax_invoice.excise %></td>
+        <td><%= tax_invoice.ed_cess %></td>
+        <td><%= tax_invoice.edu_cess %></td>
+        <td><%= tax_invoice.value_added_tax %></td>
+
+
         <td><%= tax_invoice.total_payment.round(2) %></td>
         <td><%= tax_invoice.payment %></td>
 
