--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -19,6 +19,12 @@
       <%= f.select :product_name, options_for_select(@product.map{|d|[d.product_name, d.product_name] }),{ :include_blank => true }, :class => 'number_field' %>
     </div>
   </div>
+    <div class="control-group">
+      <%= f.label :product_number, :class => 'control-label' %>
+      <div class="controls">
+        <%= f.text_field :product_number, :class => 'number_field' %>
+      </div>
+    </div>
   <div class="control-group">
     <%= f.label :quantity, :class => 'control-label' %>
     <div class="controls">
