--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -8,6 +8,7 @@
       <th><%= model_class.human_attribute_name(:id) %></th>
       <th><%= model_class.human_attribute_name(:PO_number) %></th>
       <th><%= model_class.human_attribute_name(:date,:order => [:day, :month, :year]) %></th>
+      <th><%= model_class.human_attribute_name(:product_number) %></th>
       <th><%= model_class.human_attribute_name(:product_name) %></th>
       <th><%= model_class.human_attribute_name(:quantity) %></th>
 
