--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -5,8 +5,8 @@
 
 <%= search_form_for @search do |f| %>
       <div class="field">
-        <%= f.label :product_name_cont, "Name Contains" %>
-        <%= f.text_field :product_name_cont %>
+        <%= f.label :product_number_cont, "Name Contains" %>
+        <%= f.text_field :product_number_cont %>
       </div>
     <div class="actions">
       <%= f.submit "search" %>
