--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -24,14 +24,14 @@
       <th><%= model_class.human_attribute_name(:product_type) %></th>
 
       <th><%= model_class.human_attribute_name(:rate) %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+
     </tr>
   </thead>
   <tbody>
 
     <% @products.each do |product| %>
       <tr>
-        <td><%= link_to product.id, {:controller => "orders", :action => "new", :id1 => product.product_name, :id2 => product.product_number} %></td>
+        <td><%= link_to product.id, product_path(product) %></td>
         <td><%= product.product_number %></td>
 
         <td><%= product.product_name %></td>
@@ -40,13 +40,7 @@
 
         <td><%= product.rate %></td>
         <td>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_product_path(product), :class => 'btn btn-mini' %>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      product_path(product),
-                      :method => :delete,
-                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-                      :class => 'btn btn-mini btn-danger' %>
+
         </td>
       </tr>
     <% end %>
