--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -29,9 +29,11 @@
               products_path, :class => 'btn'  %>
   <%= link_to t('.edit', :default => t("helpers.links.edit")),
               edit_product_path(@product), :class => 'btn' %>
+  <%= link_to "Order",{:controller => "orders", :action => "new", :id1 => @product.product_name, :id2 => @product.product_number}, :class => "btn" %>
   <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
               product_path(@product),
               :method => 'delete',
               :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
               :class => 'btn btn-danger' %>
+
 </div>
