--- a/app/views/tax_invoices/vijay.erb
+++ b/app/views/tax_invoices/vijay.erb
@@ -1,118 +1,3 @@
-<html>
-<head>
-  <title>Invoice</title>
-</head>
-<body>
-<h1>INVOICE</h1>
-<table border="1" cellpadding="0" cellspacing="0">
-  <tr>
-    <td>
-      <dt><strong>Product Order NO.</strong></dt>
-    </td>
-    <td>
-      <dd><%= @tax_invoice.PO_number%></dd>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      <dt><strong>Invoice Number:</strong></dt>
-    </td>
-    <td>
-      <dd><%= @tax_invoice.invoice_number %></dd>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      <dt><strong>Invoice Date:</strong></dt>
-    </td>
-    <td>
-      <dd><%= @tax_invoice.invoice_date  %></dd>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      <dt><strong>Due Date:</strong></dt>
-    </td>
-    <td>
-      <dd><%= @tax_invoice.due_date %></dd>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      <dt><strong>Product Name:</strong></dt>
-    </td>
-    <td>
-      <dd><%= @tax_invoice.product_name %></dd>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      <dt><strong>Invoice Type</strong></dt>
-    </td>
-    <td>
-      <dd><%= @tax_invoice.invoice_type %></dd>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      <dt><strong>Quantity</strong></dt>
-    </td>
-    <td>
-      <dd><%= @tax_invoice.quantity %></dd>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      <dt><strong>Rate</strong></dt>
-    </td>
-    <td>
-      <dd><%= @tax_invoice.rate %></dd>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      <dt><strong>Amount</strong></dt>
-    </td>
-    <td>
-      <dd><%= @tax_invoice.amount %></dd>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      <dt><strong>Labour Charges</strong></dt>
-    </td>
-    <td>
-      <dd><%= @tax_invoice.labour_charges %></dd>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      <dt><strong>Total payment</strong></dt>
-    </td>
-    <td>
-      <dd><%= @tax_invoice.total_payment %></dd>
-    </td>
-  </tr>
-</table>
-
-</body>
-</html>
 
 
-
-
-
-<style type="text/css">
-    .logo img
-    {
-        height:100px;
-        width:100px;
-        margin:30px 0px 0px 100px;
-    }
-    .logo h1
-    {
-        padding:0px 0px 0px 0px;
-        margin:-60px 0px 0px 0px;
-    }
-
-</style>
+<<td><%= link_to product.id, {:controller => "orders", :action => "new", :id1 => product.product_name, :id2 => product.product_number} %></td>/style>
