--- a/app/views/tax_invoices/vijay.erb
+++ b/app/views/tax_invoices/vijay.erb
@@ -1,3 +1,3 @@
-
+{:controller => "tax_invoices", :action => "new", :id3 => order.PO_number}
 
 <<td><%= link_to product.id, {:controller => "orders", :action => "new", :id1 => product.product_name, :id2 => product.product_number} %></td>/style>
