--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -14,13 +14,13 @@
 
 
 
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+
     </tr>
   </thead>
   <tbody>
     <% @orders.each do |order| %>
       <tr>
-        <td><%= link_to order.id, {:controller => "tax_invoices", :action => "new", :id3 => order.PO_number} %></td>
+        <td><%= link_to order.id, order_path(order) %></td>
         <td><%= order.PO_number %></td>
         <td><%= order.date %></td>
         <td><%= order.product_number %></td>
@@ -30,8 +30,7 @@
 
 
         <td>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_order_path(order), :class => 'btn btn-mini' %>
+
 
         </td>
       </tr>
