--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -10,6 +10,7 @@
       <th><%= model_class.human_attribute_name(:date,:order => [:day, :month, :year]) %></th>
       <th><%= model_class.human_attribute_name(:product_number) %></th>
       <th><%= model_class.human_attribute_name(:product_name) %></th>
+      <th><%= model_class.human_attribute_name(:product_type) %></th>
       <th><%= model_class.human_attribute_name(:quantity) %></th>
 
 
@@ -25,6 +26,7 @@
         <td><%= order.date %></td>
         <td><%= order.product_number %></td>
         <td><%= order.product_name %></td>
+        <td><%= order.product_type %></td>
         <td><%= order.quantity %></td>
 
 
