--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -12,6 +12,8 @@
   <dd><%= @order.product_number %></dd>
   <dt><strong><%= model_class.human_attribute_name(:product_name) %>:</strong></dt>
   <dd><%= @order.product_name %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:product_type) %>:</strong></dt>
+  <dd><%= @order.product_type %></dd>
   <dt><strong><%= model_class.human_attribute_name(:quantity) %>:</strong></dt>
   <dd><%= @order.quantity %></dd>
 
@@ -23,7 +25,7 @@
               orders_path, :class => 'btn'  %>
   <%= link_to t('.edit', :default => t("helpers.links.edit")),
               edit_order_path(@order), :class => 'btn' %>
-  <%= link_to "Tax Invoice",{:controller => "tax_invoices", :action => "new", :id3 => @order.PO_number}, :class => "btn" %>
+  <%= link_to "Tax Invoice",{:controller => "tax_invoices", :action => "new", :id3 => @order.PO_number, :id4 => @order.product_type}, :class => "btn" %>
   <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
               order_path(@order),
               :method => 'delete',
