--- a/app/views/tax_invoices/_form.html.erb
+++ b/app/views/tax_invoices/_form.html.erb
@@ -20,6 +20,13 @@
     </div>
   </div>
 
+    <div class="control-group">
+      <%= f.label :return_quantity, :class => 'control-label' %>
+      <div class="controls">
+        <%= f.text_field :return_quantity, :class => 'text_field' %>
+      </div>
+    </div>
+
 
 
 
