--- a/app/views/tax_invoices/generate_pdf.html.erb
+++ b/app/views/tax_invoices/generate_pdf.html.erb
@@ -80,13 +80,41 @@
         </tr>
       </table>
 
-      <table height="390" width="1000" border="1" align="center" cellpadding="0" cellspacing="0">
+      <table height="45" width="1000" border="1" align="center" cellpadding="0" cellspacing="0">
 
         <tr valign="top">
           <td width="4%" align="center">&nbsp;</td>
           <td width="15%" align="center"><%= @tax_invoice.product_number %></td>
           <td width="33%" align="center"> <%= @tax_invoice.product_name %></td>
           <td width="10%" align="center"><%= @tax_invoice.quantity %></td>
+          <td width="23%" align="center">&nbsp;</td>
+
+          <td width="15%" align="center">&nbsp;</td>
+
+        </tr>
+      </table>
+
+      <table height="45" width="1000" border="1" align="center" cellpadding="0" cellspacing="0">
+
+        <tr valign="top">
+          <td width="4%" align="center">&nbsp;</td>
+          <td width="15%" align="center">&nbsp;</td>
+          <td width="33%" align="center"> &nbsp;</td>
+          <td width="10%" align="center"><%= @tax_invoice.return_quantity %></td>
+          <td width="23%" align="center">&nbsp;</td>
+
+          <td width="15%" align="center">&nbsp;</td>
+
+        </tr>
+      </table>
+
+      <table height="300" width="1000" border="1" align="center" cellpadding="0" cellspacing="0">
+
+        <tr valign="top">
+          <td width="4%" align="center">&nbsp;</td>
+          <td width="15%" align="center">&nbsp;</td>
+          <td width="33%" align="center"> &nbsp;</td>
+          <td width="10%" align="center"><%= @tax_invoice.final_quantity %></td>
           <td width="23%" align="center"><%= @tax_invoice.rate %></td>
 
           <td width="15%" align="center"><%= @tax_invoice.amount.round(2) %></td>
