--- a/app/views/tax_invoices/show.html.erb
+++ b/app/views/tax_invoices/show.html.erb
@@ -19,6 +19,10 @@
   <dd><%= @tax_invoice.invoice_type %></dd>
   <dt><strong><%= model_class.human_attribute_name(:quantity) %>:</strong></dt>
   <dd><%= @tax_invoice.quantity %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:return_quantity) %>:</strong></dt>
+  <dd><%= @tax_invoice.return_quantity %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:final_quantity) %>:</strong></dt>
+  <dd><%= @tax_invoice.final_quantity %></dd>
   <dt><strong><%= model_class.human_attribute_name(:rate) %>:</strong></dt>
   <dd><%= @tax_invoice.rate %></dd>
   <dt><strong><%= model_class.human_attribute_name(:amount) %>:</strong></dt>
