company scaffold added

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,6 +52,7 @@
 
               <li><%= link_to "Bank Transaction", :bank_transactions  %></li>
 
+              <li><%= link_to "companies", :companies  %></li>
 
               <li><%= link_to "Tax Invoice", :tax_invoices  %></li>
 
