--- a/app/views/tax_invoices/generate_pdf.html.erb
+++ b/app/views/tax_invoices/generate_pdf.html.erb
@@ -32,7 +32,10 @@
         <tr>
 
           <td valign="top" width="50%">
-            To.
+            To.<br>
+                 <h3><%= @tax_invoice.company.name %></h3>
+
+                 <h4><%= @tax_invoice.company.add %></h4>
           </td>
 
           <td valign="top">
