--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -3,4 +3,45 @@
   <h1><%=t '.title', :default => t('helpers.titles.edit', :model => model_class.model_name.human,
                                    :default => "Edit #{model_class.model_name.human}") %></h1>
 </div>
-<%= render :partial => 'form' %>
+
+<%= form_for @product, :html => { :class => 'form-horizontal' } do |f| %>
+    <div class="control-group">
+      <%= f.label :product_number, :class => 'control-label' %>
+      <div class="controls">
+        <%= f.text_field :product_number, :class => 'text_field' %>
+      </div>
+    </div>
+
+    <div class="control-group">
+      <%= f.label :product_name, :class => 'control-label' %>
+      <div class="controls">
+        <%= f.text_field :product_name, :class => 'text_field' %>
+      </div>
+    </div>
+    <div class="control-group">
+      <%= f.label :vender_code, :class => 'control-label' %>
+      <div class="controls">
+        <%= f.text_field :vender_code, :class => 'text_field' %>
+      </div>
+    </div>
+    <div class="control-group">
+      <%= f.label :product_type, :class => 'control-label' %>
+      <div class="controls">
+        <%= f.select  :product_type, options_for_select(["Labour Charges Only", "With Material"], params[:id5]), :class => 'control-label'  %>
+
+      </div>
+    </div>
+
+    <div class="control-group">
+      <%= f.label :rate, :class => 'control-label' %>
+      <div class="controls">
+        <%= f.text_field :rate, :class => 'text_field' %>
+      </div>
+    </div>
+
+    <div class="form-actions">
+      <%= f.submit nil, :class => 'btn btn-primary' %>
+      <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                  products_path, :class => 'btn' %>
+    </div>
+<% end %>
