--- a/app/views/tax_invoices/show.html.erb
+++ b/app/views/tax_invoices/show.html.erb
@@ -8,9 +8,9 @@
   <dd><%= @tax_invoice.PO_number %></dd>
   <dt><strong><%= model_class.human_attribute_name(:company) %>:</strong></dt>
   <dd><%= @tax_invoice.company.name  %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:invoice_date, :order => [:day, :month, :year],) %>:</strong></dt>
+  <dt><strong><%= model_class.human_attribute_name(:invoice_date, :order => [:day, :month, :year]) %>:</strong></dt>
   <dd><%= @tax_invoice.invoice_date %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:po_date, :order => [:day, :month, :year],) %>:</strong></dt>
+  <dt><strong><%= model_class.human_attribute_name(:po_date, :order => [:day, :month, :year]) %>:</strong></dt>
   <dd><%= @tax_invoice.po_date %></dd>
   <dt><strong><%= model_class.human_attribute_name(:product_number) %>:</strong></dt>
   <dd><%= @tax_invoice.product_number %></dd>
@@ -47,7 +47,7 @@
   <%= link_to t('.back', :default => t("helpers.links.back")),
               tax_invoices_path, :class => 'btn'  %>
   <%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_tax_invoice_path(@tax_invoice), :class => 'btn' %>
+              {:controller => "tax_invoices", :action => "edit", :id8 => @tax_invoice.PO_number, :id9 => @tax_invoice.company}, :class => 'btn' %>
   <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
               tax_invoice_path(@tax_invoice),
               :method => 'delete',
